--- a/Spring_test_0508_myBatis/pom.xml
+++ b/Spring_test_0508_myBatis/pom.xml
@@ -14,7 +14,7 @@
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
 
-	<!-- oracle 저장소 -->
+	<!-- oracle 외부 저장소 -->
 	<repositories>
 		<repository>
 			<id>codelds</id>
@@ -23,7 +23,21 @@
 	</repositories>
 
 	<dependencies>
+	
+		<!--oracle OJDBC6 -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>12.1.0.2</version>
+		</dependency>
 
+		<!-- DBconnetion pool -->
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
+		
 		<!-- myBatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
@@ -53,28 +67,13 @@
 			<version>2.7.4</version>
 		</dependency>
 
-		<!--oracle OJDBC6 -->
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>12.1.0.2</version>
-		</dependency>
-
-		<!-- DBconnetion pool -->
-		<dependency>
-			<groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
-			<version>1.4</version>
-		</dependency>
-
-
-
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${org.springframework-version}</version>
 			<exclusions>
+			
 				<!-- Exclude Commons Logging in favor of SLF4j -->
 				<exclusion>
 					<groupId>commons-logging</groupId>
